// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pages salesOfferPackage should render an error when errors are passed through 1`] = `
<Component
  description="Sales Offer Packages page for the Fares Data Build Tool"
  title="Sales Offer Packages - Fares Data Build Tool"
>
  <CsrfForm
    action="/api/salesOfferPackages"
    csrfToken=""
    method="post"
  >
    <ErrorSummary
      errors={
        Array [
          Object {
            "errorMessage": "error",
            "id": "",
          },
        ]
      }
    />
    <h1
      className="govuk-heading-xl"
    >
      How are the tickets sold - sales offer package
    </h1>
    <span
      className="govuk-hint"
      id="service-list-hint"
    >
      Select all that apply from the lists below
    </span>
    <div
      className="govuk-grid-row"
    >
      <div
        className="govuk-grid-column-two-thirds"
      >
        <FormElementWrapper
          errorClass="govuk-form-group--error"
          errorId="purchaseLocations"
          errors={
            Array [
              Object {
                "errorMessage": "error",
                "id": "",
              },
            ]
          }
        >
          <div
            className="govuk-form-group"
          >
            <fieldset
              aria-describedby="sop-purchase-locations"
              className="govuk-fieldset"
            >
              <p
                className="govuk-body"
                id="sop-purchase-locations"
              >
                Where can tickets be purchased?
              </p>
              <div
                className="govuk-checkboxes__item"
                key="checkbox-item-on-board"
              >
                <input
                  className="govuk-checkboxes__input"
                  defaultChecked={false}
                  id="checkbox-0-on-board"
                  name="purchaseLocations"
                  type="checkbox"
                  value="onBoard"
                />
                <label
                  className="govuk-label govuk-checkboxes__label"
                  htmlFor="checkbox-0-on-board"
                >
                  On Board
                </label>
              </div>
              <div
                className="govuk-checkboxes__item"
                key="checkbox-item-online"
              >
                <input
                  className="govuk-checkboxes__input"
                  defaultChecked={false}
                  id="checkbox-1-online"
                  name="purchaseLocations"
                  type="checkbox"
                  value="online"
                />
                <label
                  className="govuk-label govuk-checkboxes__label"
                  htmlFor="checkbox-1-online"
                >
                  Online
                </label>
              </div>
              <div
                className="govuk-checkboxes__item"
                key="checkbox-item-online-account"
              >
                <input
                  className="govuk-checkboxes__input"
                  defaultChecked={false}
                  id="checkbox-2-online-account"
                  name="purchaseLocations"
                  type="checkbox"
                  value="onlineAccount"
                />
                <label
                  className="govuk-label govuk-checkboxes__label"
                  htmlFor="checkbox-2-online-account"
                >
                  Online Account
                </label>
              </div>
              <div
                className="govuk-checkboxes__item"
                key="checkbox-item-telephone"
              >
                <input
                  className="govuk-checkboxes__input"
                  defaultChecked={false}
                  id="checkbox-3-telephone"
                  name="purchaseLocations"
                  type="checkbox"
                  value="telephone"
                />
                <label
                  className="govuk-label govuk-checkboxes__label"
                  htmlFor="checkbox-3-telephone"
                >
                  Telephone
                </label>
              </div>
              <div
                className="govuk-checkboxes__item"
                key="checkbox-item-electronic-pass"
              >
                <input
                  className="govuk-checkboxes__input"
                  defaultChecked={false}
                  id="checkbox-4-electronic-pass"
                  name="purchaseLocations"
                  type="checkbox"
                  value="electronicPass"
                />
                <label
                  className="govuk-label govuk-checkboxes__label"
                  htmlFor="checkbox-4-electronic-pass"
                >
                  Electronic Pass
                </label>
              </div>
              <div
                className="govuk-checkboxes__item"
                key="checkbox-item-mobile-device"
              >
                <input
                  className="govuk-checkboxes__input"
                  defaultChecked={false}
                  id="checkbox-5-mobile-device"
                  name="purchaseLocations"
                  type="checkbox"
                  value="mobileDevice"
                />
                <label
                  className="govuk-label govuk-checkboxes__label"
                  htmlFor="checkbox-5-mobile-device"
                >
                  Mobile Device
                </label>
              </div>
              <div
                className="govuk-checkboxes__item"
                key="checkbox-item-agency"
              >
                <input
                  className="govuk-checkboxes__input"
                  defaultChecked={false}
                  id="checkbox-6-agency"
                  name="purchaseLocations"
                  type="checkbox"
                  value="agency"
                />
                <label
                  className="govuk-label govuk-checkboxes__label"
                  htmlFor="checkbox-6-agency"
                >
                  Agency
                </label>
              </div>
              <div
                className="govuk-checkboxes__item"
                key="checkbox-item-tour-operator"
              >
                <input
                  className="govuk-checkboxes__input"
                  defaultChecked={false}
                  id="checkbox-7-tour-operator"
                  name="purchaseLocations"
                  type="checkbox"
                  value="tourOperator"
                />
                <label
                  className="govuk-label govuk-checkboxes__label"
                  htmlFor="checkbox-7-tour-operator"
                >
                  Tour Operator
                </label>
              </div>
            </fieldset>
          </div>
        </FormElementWrapper>
        <FormElementWrapper
          errorClass="govuk-form-group--error"
          errorId="paymentMethods"
          errors={
            Array [
              Object {
                "errorMessage": "error",
                "id": "",
              },
            ]
          }
        >
          <div
            className="govuk-form-group"
          >
            <fieldset
              aria-describedby="sop-payment-methods"
              className="govuk-fieldset"
            >
              <p
                className="govuk-body"
                id="sop-payment-methods"
              >
                How can tickets be paid for?
              </p>
              <div
                className="govuk-checkboxes__item"
                key="checkbox-item-cash"
              >
                <input
                  className="govuk-checkboxes__input"
                  defaultChecked={false}
                  id="checkbox-0-cash"
                  name="paymentMethods"
                  type="checkbox"
                  value="cash"
                />
                <label
                  className="govuk-label govuk-checkboxes__label"
                  htmlFor="checkbox-0-cash"
                >
                  Cash
                </label>
              </div>
              <div
                className="govuk-checkboxes__item"
                key="checkbox-item-debit-card"
              >
                <input
                  className="govuk-checkboxes__input"
                  defaultChecked={false}
                  id="checkbox-1-debit-card"
                  name="paymentMethods"
                  type="checkbox"
                  value="debitCard"
                />
                <label
                  className="govuk-label govuk-checkboxes__label"
                  htmlFor="checkbox-1-debit-card"
                >
                  Debit Card
                </label>
              </div>
              <div
                className="govuk-checkboxes__item"
                key="checkbox-item-credit-card"
              >
                <input
                  className="govuk-checkboxes__input"
                  defaultChecked={false}
                  id="checkbox-2-credit-card"
                  name="paymentMethods"
                  type="checkbox"
                  value="creditCard"
                />
                <label
                  className="govuk-label govuk-checkboxes__label"
                  htmlFor="checkbox-2-credit-card"
                >
                  Credit Card
                </label>
              </div>
              <div
                className="govuk-checkboxes__item"
                key="checkbox-item-contactless-payment-card"
              >
                <input
                  className="govuk-checkboxes__input"
                  defaultChecked={false}
                  id="checkbox-3-contactless-payment-card"
                  name="paymentMethods"
                  type="checkbox"
                  value="contactlessPaymentCard"
                />
                <label
                  className="govuk-label govuk-checkboxes__label"
                  htmlFor="checkbox-3-contactless-payment-card"
                >
                  Contactless Payment Card
                </label>
              </div>
              <div
                className="govuk-checkboxes__item"
                key="checkbox-item-mobile-phone"
              >
                <input
                  className="govuk-checkboxes__input"
                  defaultChecked={false}
                  id="checkbox-4-mobile-phone"
                  name="paymentMethods"
                  type="checkbox"
                  value="mobilePhone"
                />
                <label
                  className="govuk-label govuk-checkboxes__label"
                  htmlFor="checkbox-4-mobile-phone"
                >
                  Mobile Phone
                </label>
              </div>
              <div
                className="govuk-checkboxes__item"
                key="checkbox-item-sms"
              >
                <input
                  className="govuk-checkboxes__input"
                  defaultChecked={false}
                  id="checkbox-5-sms"
                  name="paymentMethods"
                  type="checkbox"
                  value="sms"
                />
                <label
                  className="govuk-label govuk-checkboxes__label"
                  htmlFor="checkbox-5-sms"
                >
                  SMS
                </label>
              </div>
              <div
                className="govuk-checkboxes__item"
                key="checkbox-item-cheque"
              >
                <input
                  className="govuk-checkboxes__input"
                  defaultChecked={false}
                  id="checkbox-6-cheque"
                  name="paymentMethods"
                  type="checkbox"
                  value="cheque"
                />
                <label
                  className="govuk-label govuk-checkboxes__label"
                  htmlFor="checkbox-6-cheque"
                >
                  Cheque
                </label>
              </div>
              <div
                className="govuk-checkboxes__item"
                key="checkbox-item-bank-transfer"
              >
                <input
                  className="govuk-checkboxes__input"
                  defaultChecked={false}
                  id="checkbox-7-bank-transfer"
                  name="paymentMethods"
                  type="checkbox"
                  value="bankTransfer"
                />
                <label
                  className="govuk-label govuk-checkboxes__label"
                  htmlFor="checkbox-7-bank-transfer"
                >
                  Bank Transfer
                </label>
              </div>
              <div
                className="govuk-checkboxes__item"
                key="checkbox-item-warrant"
              >
                <input
                  className="govuk-checkboxes__input"
                  defaultChecked={false}
                  id="checkbox-8-warrant"
                  name="paymentMethods"
                  type="checkbox"
                  value="warrant"
                />
                <label
                  className="govuk-label govuk-checkboxes__label"
                  htmlFor="checkbox-8-warrant"
                >
                  Warrant
                </label>
              </div>
              <div
                className="govuk-checkboxes__item"
                key="checkbox-item-voucher"
              >
                <input
                  className="govuk-checkboxes__input"
                  defaultChecked={false}
                  id="checkbox-9-voucher"
                  name="paymentMethods"
                  type="checkbox"
                  value="voucher"
                />
                <label
                  className="govuk-label govuk-checkboxes__label"
                  htmlFor="checkbox-9-voucher"
                >
                  Voucher
                </label>
              </div>
            </fieldset>
          </div>
        </FormElementWrapper>
        <FormElementWrapper
          errorClass="govuk-form-group--error"
          errorId="ticketFormats"
          errors={
            Array [
              Object {
                "errorMessage": "error",
                "id": "",
              },
            ]
          }
        >
          <div
            className="govuk-form-group"
          >
            <fieldset
              aria-describedby="sales-offer-package-ticket-format"
              className="govuk-fieldset"
            >
              <p
                className="govuk-body"
              >
                What format do the tickets come in?
              </p>
              <div
                className="govuk-checkboxes__item"
                key="checkbox-item-paper-ticket"
              >
                <input
                  className="govuk-checkboxes__input"
                  defaultChecked={false}
                  id="checkbox-0-paper-ticket"
                  name="ticketFormats"
                  type="checkbox"
                  value="paperTicket"
                />
                <label
                  className="govuk-label govuk-checkboxes__label"
                  htmlFor="checkbox-0-paper-ticket"
                >
                  Paper Ticket
                </label>
              </div>
              <div
                className="govuk-checkboxes__item"
                key="checkbox-item-mobile-app"
              >
                <input
                  className="govuk-checkboxes__input"
                  defaultChecked={false}
                  id="checkbox-1-mobile-app"
                  name="ticketFormats"
                  type="checkbox"
                  value="mobileApp"
                />
                <label
                  className="govuk-label govuk-checkboxes__label"
                  htmlFor="checkbox-1-mobile-app"
                >
                  Mobile App
                </label>
              </div>
              <div
                className="govuk-checkboxes__item"
                key="checkbox-item-smart-card"
              >
                <input
                  className="govuk-checkboxes__input"
                  defaultChecked={false}
                  id="checkbox-2-smart-card"
                  name="ticketFormats"
                  type="checkbox"
                  value="smartCard"
                />
                <label
                  className="govuk-label govuk-checkboxes__label"
                  htmlFor="checkbox-2-smart-card"
                >
                  Smart Card
                </label>
              </div>
            </fieldset>
          </div>
        </FormElementWrapper>
      </div>
      <div
        className="govuk-grid-column-one-third"
      >
        <h1
          className="govuk-heading-s"
        >
          What is a Sales Offer Package?
        </h1>
        <p
          className="govuk-body"
        >
          To create a NeTEx for your fares it needs to contain the following:
        </p>
        <ol
          className="govuk-body"
        >
          <li>
            Where the ticket can be bought
          </li>
          <li>
            What payment methods can be used to buy the ticket
          </li>
          <li>
            In what format the ticket will be used by passengers
          </li>
        </ol>
        <p
          className="govuk-body"
        >
          This combination of information is known as a 
          <b>
            sales offer package
          </b>
          .
        </p>
      </div>
    </div>
    <input
      className="govuk-button"
      id="continue-button"
      type="submit"
      value="Continue"
    />
  </CsrfForm>
</Component>
`;

exports[`pages salesOfferPackage should render correctly 1`] = `
<Component
  description="Sales Offer Packages page for the Fares Data Build Tool"
  title="Sales Offer Packages - Fares Data Build Tool"
>
  <CsrfForm
    action="/api/salesOfferPackages"
    csrfToken=""
    method="post"
  >
    <ErrorSummary
      errors={Array []}
    />
    <h1
      className="govuk-heading-xl"
    >
      How are the tickets sold - sales offer package
    </h1>
    <span
      className="govuk-hint"
      id="service-list-hint"
    >
      Select all that apply from the lists below
    </span>
    <div
      className="govuk-grid-row"
    >
      <div
        className="govuk-grid-column-two-thirds"
      >
        <FormElementWrapper
          errorClass="govuk-form-group--error"
          errorId="purchaseLocations"
          errors={Array []}
        >
          <div
            className="govuk-form-group"
          >
            <fieldset
              aria-describedby="sop-purchase-locations"
              className="govuk-fieldset"
            >
              <p
                className="govuk-body"
                id="sop-purchase-locations"
              >
                Where can tickets be purchased?
              </p>
              <div
                className="govuk-checkboxes__item"
                key="checkbox-item-on-board"
              >
                <input
                  className="govuk-checkboxes__input"
                  defaultChecked={false}
                  id="checkbox-0-on-board"
                  name="purchaseLocations"
                  type="checkbox"
                  value="onBoard"
                />
                <label
                  className="govuk-label govuk-checkboxes__label"
                  htmlFor="checkbox-0-on-board"
                >
                  On Board
                </label>
              </div>
              <div
                className="govuk-checkboxes__item"
                key="checkbox-item-online"
              >
                <input
                  className="govuk-checkboxes__input"
                  defaultChecked={false}
                  id="checkbox-1-online"
                  name="purchaseLocations"
                  type="checkbox"
                  value="online"
                />
                <label
                  className="govuk-label govuk-checkboxes__label"
                  htmlFor="checkbox-1-online"
                >
                  Online
                </label>
              </div>
              <div
                className="govuk-checkboxes__item"
                key="checkbox-item-online-account"
              >
                <input
                  className="govuk-checkboxes__input"
                  defaultChecked={false}
                  id="checkbox-2-online-account"
                  name="purchaseLocations"
                  type="checkbox"
                  value="onlineAccount"
                />
                <label
                  className="govuk-label govuk-checkboxes__label"
                  htmlFor="checkbox-2-online-account"
                >
                  Online Account
                </label>
              </div>
              <div
                className="govuk-checkboxes__item"
                key="checkbox-item-telephone"
              >
                <input
                  className="govuk-checkboxes__input"
                  defaultChecked={false}
                  id="checkbox-3-telephone"
                  name="purchaseLocations"
                  type="checkbox"
                  value="telephone"
                />
                <label
                  className="govuk-label govuk-checkboxes__label"
                  htmlFor="checkbox-3-telephone"
                >
                  Telephone
                </label>
              </div>
              <div
                className="govuk-checkboxes__item"
                key="checkbox-item-electronic-pass"
              >
                <input
                  className="govuk-checkboxes__input"
                  defaultChecked={false}
                  id="checkbox-4-electronic-pass"
                  name="purchaseLocations"
                  type="checkbox"
                  value="electronicPass"
                />
                <label
                  className="govuk-label govuk-checkboxes__label"
                  htmlFor="checkbox-4-electronic-pass"
                >
                  Electronic Pass
                </label>
              </div>
              <div
                className="govuk-checkboxes__item"
                key="checkbox-item-mobile-device"
              >
                <input
                  className="govuk-checkboxes__input"
                  defaultChecked={false}
                  id="checkbox-5-mobile-device"
                  name="purchaseLocations"
                  type="checkbox"
                  value="mobileDevice"
                />
                <label
                  className="govuk-label govuk-checkboxes__label"
                  htmlFor="checkbox-5-mobile-device"
                >
                  Mobile Device
                </label>
              </div>
              <div
                className="govuk-checkboxes__item"
                key="checkbox-item-agency"
              >
                <input
                  className="govuk-checkboxes__input"
                  defaultChecked={false}
                  id="checkbox-6-agency"
                  name="purchaseLocations"
                  type="checkbox"
                  value="agency"
                />
                <label
                  className="govuk-label govuk-checkboxes__label"
                  htmlFor="checkbox-6-agency"
                >
                  Agency
                </label>
              </div>
              <div
                className="govuk-checkboxes__item"
                key="checkbox-item-tour-operator"
              >
                <input
                  className="govuk-checkboxes__input"
                  defaultChecked={false}
                  id="checkbox-7-tour-operator"
                  name="purchaseLocations"
                  type="checkbox"
                  value="tourOperator"
                />
                <label
                  className="govuk-label govuk-checkboxes__label"
                  htmlFor="checkbox-7-tour-operator"
                >
                  Tour Operator
                </label>
              </div>
            </fieldset>
          </div>
        </FormElementWrapper>
        <FormElementWrapper
          errorClass="govuk-form-group--error"
          errorId="paymentMethods"
          errors={Array []}
        >
          <div
            className="govuk-form-group"
          >
            <fieldset
              aria-describedby="sop-payment-methods"
              className="govuk-fieldset"
            >
              <p
                className="govuk-body"
                id="sop-payment-methods"
              >
                How can tickets be paid for?
              </p>
              <div
                className="govuk-checkboxes__item"
                key="checkbox-item-cash"
              >
                <input
                  className="govuk-checkboxes__input"
                  defaultChecked={false}
                  id="checkbox-0-cash"
                  name="paymentMethods"
                  type="checkbox"
                  value="cash"
                />
                <label
                  className="govuk-label govuk-checkboxes__label"
                  htmlFor="checkbox-0-cash"
                >
                  Cash
                </label>
              </div>
              <div
                className="govuk-checkboxes__item"
                key="checkbox-item-debit-card"
              >
                <input
                  className="govuk-checkboxes__input"
                  defaultChecked={false}
                  id="checkbox-1-debit-card"
                  name="paymentMethods"
                  type="checkbox"
                  value="debitCard"
                />
                <label
                  className="govuk-label govuk-checkboxes__label"
                  htmlFor="checkbox-1-debit-card"
                >
                  Debit Card
                </label>
              </div>
              <div
                className="govuk-checkboxes__item"
                key="checkbox-item-credit-card"
              >
                <input
                  className="govuk-checkboxes__input"
                  defaultChecked={false}
                  id="checkbox-2-credit-card"
                  name="paymentMethods"
                  type="checkbox"
                  value="creditCard"
                />
                <label
                  className="govuk-label govuk-checkboxes__label"
                  htmlFor="checkbox-2-credit-card"
                >
                  Credit Card
                </label>
              </div>
              <div
                className="govuk-checkboxes__item"
                key="checkbox-item-contactless-payment-card"
              >
                <input
                  className="govuk-checkboxes__input"
                  defaultChecked={false}
                  id="checkbox-3-contactless-payment-card"
                  name="paymentMethods"
                  type="checkbox"
                  value="contactlessPaymentCard"
                />
                <label
                  className="govuk-label govuk-checkboxes__label"
                  htmlFor="checkbox-3-contactless-payment-card"
                >
                  Contactless Payment Card
                </label>
              </div>
              <div
                className="govuk-checkboxes__item"
                key="checkbox-item-mobile-phone"
              >
                <input
                  className="govuk-checkboxes__input"
                  defaultChecked={false}
                  id="checkbox-4-mobile-phone"
                  name="paymentMethods"
                  type="checkbox"
                  value="mobilePhone"
                />
                <label
                  className="govuk-label govuk-checkboxes__label"
                  htmlFor="checkbox-4-mobile-phone"
                >
                  Mobile Phone
                </label>
              </div>
              <div
                className="govuk-checkboxes__item"
                key="checkbox-item-sms"
              >
                <input
                  className="govuk-checkboxes__input"
                  defaultChecked={false}
                  id="checkbox-5-sms"
                  name="paymentMethods"
                  type="checkbox"
                  value="sms"
                />
                <label
                  className="govuk-label govuk-checkboxes__label"
                  htmlFor="checkbox-5-sms"
                >
                  SMS
                </label>
              </div>
              <div
                className="govuk-checkboxes__item"
                key="checkbox-item-cheque"
              >
                <input
                  className="govuk-checkboxes__input"
                  defaultChecked={false}
                  id="checkbox-6-cheque"
                  name="paymentMethods"
                  type="checkbox"
                  value="cheque"
                />
                <label
                  className="govuk-label govuk-checkboxes__label"
                  htmlFor="checkbox-6-cheque"
                >
                  Cheque
                </label>
              </div>
              <div
                className="govuk-checkboxes__item"
                key="checkbox-item-bank-transfer"
              >
                <input
                  className="govuk-checkboxes__input"
                  defaultChecked={false}
                  id="checkbox-7-bank-transfer"
                  name="paymentMethods"
                  type="checkbox"
                  value="bankTransfer"
                />
                <label
                  className="govuk-label govuk-checkboxes__label"
                  htmlFor="checkbox-7-bank-transfer"
                >
                  Bank Transfer
                </label>
              </div>
              <div
                className="govuk-checkboxes__item"
                key="checkbox-item-warrant"
              >
                <input
                  className="govuk-checkboxes__input"
                  defaultChecked={false}
                  id="checkbox-8-warrant"
                  name="paymentMethods"
                  type="checkbox"
                  value="warrant"
                />
                <label
                  className="govuk-label govuk-checkboxes__label"
                  htmlFor="checkbox-8-warrant"
                >
                  Warrant
                </label>
              </div>
              <div
                className="govuk-checkboxes__item"
                key="checkbox-item-voucher"
              >
                <input
                  className="govuk-checkboxes__input"
                  defaultChecked={false}
                  id="checkbox-9-voucher"
                  name="paymentMethods"
                  type="checkbox"
                  value="voucher"
                />
                <label
                  className="govuk-label govuk-checkboxes__label"
                  htmlFor="checkbox-9-voucher"
                >
                  Voucher
                </label>
              </div>
            </fieldset>
          </div>
        </FormElementWrapper>
        <FormElementWrapper
          errorClass="govuk-form-group--error"
          errorId="ticketFormats"
          errors={Array []}
        >
          <div
            className="govuk-form-group"
          >
            <fieldset
              aria-describedby="sales-offer-package-ticket-format"
              className="govuk-fieldset"
            >
              <p
                className="govuk-body"
              >
                What format do the tickets come in?
              </p>
              <div
                className="govuk-checkboxes__item"
                key="checkbox-item-paper-ticket"
              >
                <input
                  className="govuk-checkboxes__input"
                  defaultChecked={false}
                  id="checkbox-0-paper-ticket"
                  name="ticketFormats"
                  type="checkbox"
                  value="paperTicket"
                />
                <label
                  className="govuk-label govuk-checkboxes__label"
                  htmlFor="checkbox-0-paper-ticket"
                >
                  Paper Ticket
                </label>
              </div>
              <div
                className="govuk-checkboxes__item"
                key="checkbox-item-mobile-app"
              >
                <input
                  className="govuk-checkboxes__input"
                  defaultChecked={false}
                  id="checkbox-1-mobile-app"
                  name="ticketFormats"
                  type="checkbox"
                  value="mobileApp"
                />
                <label
                  className="govuk-label govuk-checkboxes__label"
                  htmlFor="checkbox-1-mobile-app"
                >
                  Mobile App
                </label>
              </div>
              <div
                className="govuk-checkboxes__item"
                key="checkbox-item-smart-card"
              >
                <input
                  className="govuk-checkboxes__input"
                  defaultChecked={false}
                  id="checkbox-2-smart-card"
                  name="ticketFormats"
                  type="checkbox"
                  value="smartCard"
                />
                <label
                  className="govuk-label govuk-checkboxes__label"
                  htmlFor="checkbox-2-smart-card"
                >
                  Smart Card
                </label>
              </div>
            </fieldset>
          </div>
        </FormElementWrapper>
      </div>
      <div
        className="govuk-grid-column-one-third"
      >
        <h1
          className="govuk-heading-s"
        >
          What is a Sales Offer Package?
        </h1>
        <p
          className="govuk-body"
        >
          To create a NeTEx for your fares it needs to contain the following:
        </p>
        <ol
          className="govuk-body"
        >
          <li>
            Where the ticket can be bought
          </li>
          <li>
            What payment methods can be used to buy the ticket
          </li>
          <li>
            In what format the ticket will be used by passengers
          </li>
        </ol>
        <p
          className="govuk-body"
        >
          This combination of information is known as a 
          <b>
            sales offer package
          </b>
          .
        </p>
      </div>
    </div>
    <input
      className="govuk-button"
      id="continue-button"
      type="submit"
      value="Continue"
    />
  </CsrfForm>
</Component>
`;
